# Rewaita

./: README.md  io.github.swordpuffin.rewaita.json  io.github.swordpuffin.wardrobe.json  meson.build
data/: io.github.swordpuffin.rewaita.desktop.in  io.github.swordpuffin.rewaita.gschema.xml  io.github.swordpuffin.rewaita.metainfo.xml.in  io.github.swordpuffin.rewaita.service.in  io.github.swordpuffin.wardrobe.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  en_AU.po  meson.build  nl.po  pl.po  rewaita.pot  ru.po  tr.po  vi.po  wardrobe.pot  zh_CN.po
src/: custom_theme.py  image_modifier.py  interface_to_shell_theme.py  main.py  meson.build  rewaita.gresource.xml  rewaita.in  styles.css  utils.py  window.py  window.ui
src/themes/: Purple Night (HDR).css  custom-template.css  default-dark.css  default-light.css  firefox_gnome_theme.py  gnome-shell-template.css
src/themes/dark/: Bluetiful Dusk 🌃.css  Bluetiful Dusk.css  Breeze Dark 🎐.css  Breeze Dark.css  Catppuccin Frappe 🪴.css  Catppuccin Macchiato 🌺 (Pink).css  Catppuccin Macchiato 🌺.css  Catppuccin Mocha 🌿.css  Dracula 🧛🏻‍♂️.css  Everforest 🌲.css  Gruvbox Hard 🌳.css  Gruvbox Medium 🌴.css  Gruvbox Soft 🌱.css  Kanagawa 🌊.css  Material Deepocean 🐚.css  Material Palenight 🌙.css  Nightfox 🦊.css  Nord 🏔️.css  One Dark ⚛️.css  Otto 🐙.css  Pretty Purple 🌆.css  Purple Dusk (HDR).css  Rosé Pine Moon 🌒.css  Rosé Pine 🌹.css  Solarized ☀️.css  Synthwave '84 🌅.css  Tokyonight Storm 🌪️.css  Tokyonight 🗼.css  catppuccin-frappe.css  catppuccin-mocha.css  dracula.css  everforest.css  gruvbox-medium.css  gruvbox-soft.css  kanagawa.css  material-deepocean.css  material-palenight.css  nightfox.css  nord.css  rose-pine-moon.css  (+5 more)
src/themes/gtk3-template/: assets.tar.xz  gtk.css
src/themes/light/: Alucard 🧛🏻‍♂️.css  Catppuccin Latte 🌻.css  Dawnfox 🦊.css  Everforest 🌲.css  Gruvbox Hard 🌳.css  Gruvbox Medium 🌴.css  Gruvbox Soft 🌱.css  Kanagawa Paper 🏮.css  Kanagawa 🌊.css  Kanagawa-Paper 🏮.css  Nord 🏔️.css  Rosé Pine Dawn 🌄.css  Solarized ☀️.css  Thorn 🪾.css  Tokyonight 🗼.css  catppuccin-latte.css  dawnfox.css  dracula.css  everforest.css  gruvbox-medium.css  gruvbox-soft.css  kanagawa.css  nord.css  rose-pine-dawn.css  rosepine.css  solarized.css  tokyonight.css
src/themes/window-controls/: colored.css  macos.css
src/themes/window-controls/gtk3/: breeze.css  colored.css  hidden.css  macos.css  mint.css
src/themes/window-controls/gtk4/: breeze.css  colored.css  hidden.css  macos.css  mint.css
src/widgets/: accent_box.py  custom_theme_page.py  extra_options_box.py  guide_dialog.ui  install_page.py  item_carousel.py  loading_dialog.py  main_page.py  main_page_banner.py  pref_dialog.py  pref_page.py  search_page.py  theme_cell.py  theme_cell_flowbox.py  theme_page.py  wallpaper_dialog.py  window_control_box.py
